Changed Titles and prepared template for Find

--- a/04.insert.html
+++ b/04.insert.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Insert</title>
+    <title>MongoDB Insert</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -13,7 +13,7 @@
   </head>
   <body class="w3-container">
 
-    <h1>Insert</h1>
+    <h1>MongoDB Insert</h1>
 
     <h2>Inserting Documents</h2>
 
