--- a/02.create-database.html
+++ b/02.create-database.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Create Database</title>
+    <title>MongoDB Create</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -13,7 +13,7 @@
   </head>
   <body class="w3-container">
 
-    <h1>Create Database</h1>
+    <h1>MongoDB Create</h1>
 
     <h2>Creating a Database</h2>
 
