--- a/03.collections.html
+++ b/03.collections.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Collections</title>
+    <title>MongoDB Collections</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -13,7 +13,7 @@
   </head>
   <body class="w3-container">
 
-    <h1>Collections</h1>
+    <h1>MongoDB Collections</h1>
 
     <h2>Creating Collections</h2>
 
