--- a/07.sort.html
+++ b/07.sort.html
@@ -21,16 +21,110 @@
 
     <p>The <b>sort()</b> method takes one argument that holds an object defining the sorting order.</p>
 
+    <div class="w3-panel w3-border-blue w3-leftbar w3-pale-blue">
+      <p>Using the value <b>1</b> in the sort object will sort results in ascending order.</p>
+
+      <p>Using the value <b>-1</b> in the sort object will sort results in descending order.</p>
+
+      <p>// { name: 1 } = ascending</p>
+      <p>// { name: -1 } = descending</p>
+    </div>
+
+    <h2>Sort - Ascending</h2>
+
+    <p>The following example sorts the results using the name field in alphabetical order:</p>
+
     <pre><code class="language-javascript">
-      
+      // Ascending Order
+
+      var MongoClient = require('mongodb').MongoClient;
+      var url = 'mongodb://localhost:27017/mydb';
+
+      MongoClient.connect(url, function(err, db) {
+        if(err) throw err;
+        var mysort = { name: 1 };
+        db.collection('customers').find().sort(mysort).toArray(function(err, result) {
+          if(err) throw err;
+          console.log(result);
+          db.close();
+        });
+      });
     </code></pre>
 
+    <p>Run the app.js file containing the code above using the following:</p>
 
+    <pre><code class="language-javascript">
+      node app.js
 
+      Result:
+        [ { _id: 59ee910440030506aa61d275,
+            name: 'Brian',
+            address: '1289 Down St' },
+          { _id: 59ee910440030506aa61d274,
+            name: 'Jason',
+            address: '2322 Up St' },
+          { _id: 59ee477f406931606fb2a004,
+            name: 'My Company',
+            address: 'Boulder CO' },
+          { _id: 59ee910440030506aa61d276,
+            name: 'Rebecca',
+            address: '226 Left St' },
+          { _id: 59ee910440030506aa61d278,
+            name: 'Sasquach',
+            address: '456 Middle St' },
+          { _id: 59ee910440030506aa61d277,
+            name: 'T-Bone',
+            address: '333 Right St' } ]
+    </code></pre>
 
+    <hr>
 
+    <h2>Sort - Descending</h2>
 
+    <p>The following example will sort the results in <b>reverse</b> alphabetical order:</p>
 
+    <pre><code class="language-javascript">
+      // Descending Order
+
+      var MongoClient = require('mongodb').MongoClient;
+      var url = 'mongodb://localhost:27017/mydb';
+
+      MongoClient.connect(url, function(err, db) {
+        if(err) throw err;
+        var mysort = { name: -1 };
+        db.collection('customers').find().sort(mysort).toArray(function(err, result) {
+          if(err) throw err;
+          console.log(result);
+          db.close();
+        });
+      });
+    </code></pre>
+
+    <p>Run the app.js file containing the code above using the following:</p>
+
+    <pre><code class="language-javascript">
+      node app.js
+
+      Result:
+        [ { _id: 59ee910440030506aa61d277,
+            name: 'T-Bone',
+            address: '333 Right St' },
+          { _id: 59ee910440030506aa61d278,
+            name: 'Sasquach',
+            address: '456 Middle St' },
+          { _id: 59ee910440030506aa61d276,
+            name: 'Rebecca',
+            address: '226 Left St' },
+          { _id: 59ee477f406931606fb2a004,
+            name: 'My Company',
+            address: 'Boulder CO' },
+          { _id: 59ee910440030506aa61d274,
+            name: 'Jason',
+            address: '2322 Up St' },
+          { _id: 59ee910440030506aa61d275,
+            name: 'Brian',
+            address: '1289 Down St' } ]
+    </code></pre>
 
 
 
