Prepared template for Delete

--- a/08.delete.html
+++ b/08.delete.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title></title>
+    <title>Delete</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -13,11 +13,21 @@
   </head>
   <body class="w3-container">
 
-    <h1></h1>
+    <h1>Delete</h1>
 
-    <h2></h2>
+    <h2>Deleting Documents</h2>
 
-    <p></p>
+    <p>We can use the <b>deleteOne()</b> method to delete a document (record) from a MongoDB database.</p>
+
+    <p>The first paramter of the <b>deleteOne()</b> method holds a query object defining which document to delete.</p>
+
+    <div class="w3-panel w3-border-blue w3-leftbar w3-pale-blue">
+      <p>If the query finds more than one document matching the specified query, only the first one will be deleted.</p>
+    </div>
+
+    <pre><code class="language-javascript">
+      
+    </code></pre>
 
 
 
