Added notes and snippets for Delete.

--- a/07.sort.html
+++ b/07.sort.html
@@ -56,7 +56,7 @@
     <pre><code class="language-javascript">
       node app.js
 
-      Result:
+      // Result:
         [ { _id: 59ee910440030506aa61d275,
             name: 'Brian',
             address: '1289 Down St' },
@@ -105,7 +105,7 @@
     <pre><code class="language-javascript">
       node app.js
 
-      Result:
+      // Result:
         [ { _id: 59ee910440030506aa61d277,
             name: 'T-Bone',
             address: '333 Right St' },
