--- a/08.delete.html
+++ b/08.delete.html
@@ -15,7 +15,7 @@
 
     <h1>Delete</h1>
 
-    <h2>Deleting Documents</h2>
+    <h2>Deleting One</h2>
 
     <p>We can use the <b>deleteOne()</b> method to delete a document (record) from a MongoDB database.</p>
 
@@ -25,14 +25,83 @@
       <p>If the query finds more than one document matching the specified query, only the first one will be deleted.</p>
     </div>
 
+    <p>In the following example we will delete the document that holds the address 1289 Down St:</p>
+
     <pre><code class="language-javascript">
-      
+      var MongoClient = require('mongodb').MongoClient;
+      var url = "mongodb://localhost:27017/mydb";
+
+      MongoClient.connect(url, function(err, db) {
+        if(err) throw err;
+        var query = { address: '1289 Down St' };
+        db.collection('customers').deleteOne(query, function(err, obj) {
+          if (err) throw err;
+          console.log('Document Deleted!');
+          db.close();
+        });
+      });
     </code></pre>
 
+    <p>Run the app.js file containing the code above using the following:</p>
 
+    <pre><code class="language-javascript">
+      node app.js
 
+      // Result: Document Deleted!
+    </code></pre>
 
+    <hr>
 
+    <h2>Delete Many</h2>
+
+    <p>We can use the <b>deleteMany()</b> method to delete more than one document.</p>
+
+    <p>The first parameter of the <b>deleteMany()</b> method holds a query object defining which documents to delete.</p>
+
+    <p> In the following example we will delete all documents where the address starts with the number 2:</p>
+
+    <pre><code class="language-javascript">
+      var MongoClient = require('mongodb').MongoClient;
+      var url = 'mongodb://localhost:27017/mydb';
+
+      MongoClient.connect(url, function(err, db) {
+        if(err) throw err;
+        var query = { address: /^2/ };
+        db.collection('customers').deleteMany(query, function(err, obj) {
+          if(err) throw err;
+          console.log(obj.result.n + ' Document(s) Deleted!');
+          db.close();
+        });
+      });
+    </code></pre>
+
+    <p>Run the app.js file containing the code above using the following:</p>
+
+    <pre><code class="language-javascript">
+      node app.js
+
+      // Result: 2 Document(s) Deleted!
+    </code></pre>
+
+    <hr>
+
+    <h2>Result Object</h2>
+
+    <p>The <b>deleteMany()</b> method returns an object with information about how the query affected the database.</p>
+
+    <p>One property of this object is the <b>result</b> property which describes if the execution was successful, and how many documents were affected.</p>
+
+    <p>We can use this object to return the number of deleted documents using the following:</p>
+
+    <pre><code class="language-javascript">
+      console.log(obj.result.n + ' Document(s) Deleted!');
+    </code></pre>
+
+    <p>In the example above, the result will be:</p>
+
+    <pre><code class="language-javascript">
+      // Result: 2 Document(s) Deleted!
+    </code></pre>
 
 
 
