Updated titles and prepared template for Update.

--- a/07.sort.html
+++ b/07.sort.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Sort</title>
+    <title>MongoDB Sort</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -13,7 +13,7 @@
   </head>
   <body class="w3-container">
 
-    <h1>Sort</h1>
+    <h1>MongoDB Sort</h1>
 
     <h2>Sorting Results</h2>
 
