--- a/06.query.html
+++ b/06.query.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Query</title>
+    <title>MongoDB Query</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -13,7 +13,7 @@
   </head>
   <body class="w3-container">
 
-    <h1>Wuery Objects</h1>
+    <h1>MongoDB Query</h1>
 
     <h2>Filtering Results</h2>
 
