Added index links, added logo, changed some styles.

--- a/10.update.html
+++ b/10.update.html
@@ -155,6 +155,15 @@
     <!-- Back Button -->
     <button class="w3-button w3-block w3-teal w3-large w3-margin-bottom w3-hover-gray w3-round" onclick="(function() {window.history.back()}())">Back</button>
 
-  <script src="http://localhost:35729/livereload.js"></script>
+    <!-- Navigation -->
+    <nav>
+      <ul>
+        <li class="nav"><a href="http://joefly.site">Home</a></li>
+        <li class="nav"><a href="../../resume">Resume</a></li>
+        <li class="nav"><a href="../../portfolio">Portfolio</a></li>
+        <li class="nav"><a href="../../projects">Projects</a></li>
+        <li class="nav"><a href="../../about">About</a></li>
+      </ul>
+    </nav>
   </body>
 </html>
