Changed some classes for styling and margin for list-items.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Nodejs</title>
+    <title>Nodejs - MongoDB</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -17,7 +17,7 @@
 
     <p>Following is a collection of Node.js-MongoDB examples created while learning Node.js and MongoDB. Click on a link to view the code, and use the browser's back button, or the "Back" button at the bottom of each page, to return to this index.</p>
 
-    <ul>
+    <ul class="links">
       <li><a href="01.intro.html">Intro</a></li>
       <li><a href="02.create.html">Create</a></li>
       <li><a href="03.collections.html">Collections</a></li>
@@ -42,11 +42,11 @@
     <!-- Navigation -->
     <nav>
       <ul>
-        <li class="nav"><a href="http://joefly.site">Home</a></li>
-        <li class="nav"><a href="../../resume">Resume</a></li>
-        <li class="nav"><a href="../../portfolio">Portfolio</a></li>
-        <li class="nav"><a href="../../projects">Projects</a></li>
-        <li class="nav"><a href="../../about">About</a></li>
+        <li><a href="http://joefly.site">Home</a></li>
+        <li><a href="../../resume">Resume</a></li>
+        <li><a href="../../portfolio">Portfolio</a></li>
+        <li><a href="../../projects">Projects</a></li>
+        <li><a href="../../about">About</a></li>
       </ul>
     </nav>
 
